force-app/main/default/objects/Job__c/fields/Healthcare_Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Facility_Type__c</fullName>
    <label>Healthcare Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambulatory Surgical Centers</fullName>
            </value>
            <value>
                <fullName>Birth Centers</fullName>
            </value>
            <value>
                <fullName>Blood Banks</fullName>
            </value>
            <value>
                <fullName>Clinics and Medical Offices</fullName>
            </value>
            <value>
                <fullName>Community Hospitals</fullName>
            </value>
            <value>
                <fullName>Critical Access Hospitals</fullName>
            </value>
            <value>
                <fullName>Diagnostic and Imaging Centers</fullName>
            </value>
            <value>
                <fullName>Emergency Rooms (ER)</fullName>
            </value>
            <value>
                <fullName>Federal Hospitals</fullName>
            </value>
            <value>
                <fullName>For-Profit Hospitals</fullName>
            </value>
            <value>
                <fullName>Free Hospitals</fullName>
            </value>
            <value>
                <fullName>General Acute Care Hospitals</fullName>
            </value>
            <value>
                <fullName>Government Hospitals</fullName>
            </value>
            <value>
                <fullName>Hospice Facilities</fullName>
            </value>
            <value>
                <fullName>Long-Term Acute Care Hospitals (LTACH)</fullName>
            </value>
            <value>
                <fullName>Mental Health and Addiction Treatment Centers</fullName>
            </value>
            <value>
                <fullName>Military Hospitals</fullName>
            </value>
            <value>
                <fullName>Not-for-Profit Hospitals</fullName>
            </value>
            <value>
                <fullName>Outpatient Care Centers</fullName>
            </value>
            <value>
                <fullName>Pediatric Hospitals</fullName>
            </value>
            <value>
                <fullName>Psychiatric Hospitals</fullName>
            </value>
            <value>
                <fullName>Rehabilitation Centers</fullName>
            </value>
            <value>
                <fullName>Specialty Hospitals (Cardiac, Cancer, Orthopedic, etc.)</fullName>
            </value>
            <value>
                <fullName>Teaching Hospitals</fullName>
            </value>
            <value>
                <fullName>Trauma Centers</fullName>
            </value>
            <value>
                <fullName>Urban Hospitals</fullName>
            </value>
            <value>
                <fullName>Veterans Affairs (VA) Hospitals</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>