force-app/main/default/objects/Job__c/fields/Hired_Date__c.field-meta.xml
<CustomField>
    <fullName>Hired_Date__c</fullName>
    <label>Hired Date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>