force-app/main/default/objects/Job__c/fields/Hiring_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager_Name__c</fullName>
    <label>Hiring Manager Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>