force-app/main/default/objects/Job__c/fields/Ideal_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Candidate__c</fullName>
    <label>Ideal Candidate?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>