force-app/main/default/objects/Job__c/fields/Idibu_Category__c.field-meta.xml
<CustomField>
    <fullName>Idibu_Category__c</fullName>
    <label>Idibu Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>