force-app/main/default/objects/Job__c/fields/Idibu_Job_Time__c.field-meta.xml
<CustomField>
    <fullName>Idibu_Job_Time__c</fullName>
    <label>Idibu Job Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>