force-app/main/default/objects/Job__c/fields/Idibu_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Idibu_Job_Type__c</fullName>
    <label>Idibu Job Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>