force-app/main/default/objects/Job__c/fields/Idibu_Location__c.field-meta.xml
<CustomField>
    <fullName>Idibu_Location__c</fullName>
    <label>Idibu Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>