force-app/main/default/objects/Job__c/fields/Idibu_Salary_Range__c.field-meta.xml
<CustomField>
    <fullName>Idibu_Salary_Range__c</fullName>
    <label>Idibu Salary Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>