force-app/main/default/objects/Job__c/fields/Idibu_Sender_Id__c.field-meta.xml
<CustomField>
    <fullName>Idibu_Sender_Id__c</fullName>
    <label>Idibu Sender Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>