force-app/main/default/objects/Job__c/fields/Indeed_job_location_formula__c.field-meta.xml
<CustomField>
    <fullName>Indeed_job_location_formula__c</fullName>
    <formula>City__c &amp; &apos; &apos; &amp; TEXT(State__c) &amp; &apos; &apos; &amp; Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indeed job location formula</label>
    <type>Text</type>
</CustomField>