force-app/main/default/objects/Job__c/fields/Internal_Desc__c.field-meta.xml
<CustomField>
    <fullName>Internal_Desc__c</fullName>
    <label>Internal Desc</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>