force-app/main/default/objects/Job__c/fields/Internal_Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Internal_Job_Description__c</fullName>
    <label>Internal Job Description</label>
    <type>TextArea</type>
</CustomField>