force-app/main/default/objects/Job__c/fields/Interview_Feedback_Questionnaire_Is_Set__c.field-meta.xml
<CustomField>
    <fullName>Interview_Feedback_Questionnaire_Is_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interview Feedback Questionnaire Is Set</label>
    <type>Checkbox</type>
</CustomField>