force-app/main/default/objects/Job__c/fields/Job_Application_Tiny_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_Application_Tiny_URL__c</fullName>
    <label>Job Application Tiny URL</label>
    <type>Url</type>
</CustomField>