force-app/main/default/objects/Job__c/fields/Job_Application_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_Application_URL__c</fullName>
    <formula>&quot;https://praxiomai-dev-ed.develop.my.salesforce-sites.com&amp;&quot;&amp;&quot;/&quot; &amp; &quot;jobSfId=&quot;&amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Application URL</label>
    <type>Text</type>
</CustomField>