force-app/main/default/objects/Job__c/fields/Job_Audio_File_Text__c.field-meta.xml
<CustomField>
    <fullName>Job_Audio_File_Text__c</fullName>
    <label>Job Audio File Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>