force-app/main/default/objects/Job__c/fields/Job_Board__c.field-meta.xml
<CustomField>
    <fullName>Job_Board__c</fullName>
    <label>Job Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monster</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>