force-app/main/default/objects/Job__c/fields/Job_Board_City__c.field-meta.xml
<CustomField>
    <fullName>Job_Board_City__c</fullName>
    <label>Job Board City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anchorage</fullName>
            </value>
            <value>
                <fullName>Fairbanks</fullName>
            </value>
            <value>
                <fullName>Far North/Nome</fullName>
            </value>
            <value>
                <fullName>Juneau</fullName>
            </value>
            <value>
                <fullName>Southwest</fullName>
            </value>
            <value>
                <fullName>Anniston</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Mobile/Dothan</fullName>
            </value>
            <value>
                <fullName>Montgomery</fullName>
            </value>
            <value>
                <fullName>Northern/Huntsville</fullName>
            </value>
            <value>
                <fullName>Tuscaloosa</fullName>
            </value>
            <value>
                <fullName>Eastern</fullName>
            </value>
            <value>
                <fullName>Little Rock</fullName>
            </value>
            <value>
                <fullName>Western</fullName>
            </value>
            <value>
                <fullName>Flagstaff</fullName>
            </value>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>Tucson</fullName>
            </value>
            <value>
                <fullName>Yuma</fullName>
            </value>
            <value>
                <fullName>Anaheim/Huntington Beach</fullName>
            </value>
            <value>
                <fullName>Central Coast</fullName>
            </value>
            <value>
                <fullName>Central Valley</fullName>
            </value>
            <value>
                <fullName>Chico/Eureka</fullName>
            </value>
            <value>
                <fullName>Long Beach</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Marin County/North Bay</fullName>
            </value>
            <value>
                <fullName>Oakland/East Bay</fullName>
            </value>
            <value>
                <fullName>Orange County</fullName>
            </value>
            <value>
                <fullName>Riverside County</fullName>
            </value>
            <value>
                <fullName>Sacramento</fullName>
            </value>
            <value>
                <fullName>San Bernardino/Palm Springs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>