force-app/main/default/objects/Job__c/fields/Job_Boards_to_Publish__c.field-meta.xml
<CustomField>
    <fullName>Job_Boards_to_Publish__c</fullName>
    <label>Job Boards to Publish</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indeed</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Monster</fullName>
            </value>
            <value>
                <fullName>Glassdoor</fullName>
            </value>
            <value>
                <fullName>CareerBuilder</fullName>
            </value>
            <value>
                <fullName>ZipRecruiter</fullName>
            </value>
            <value>
                <fullName>Dice</fullName>
            </value>
            <value>
                <fullName>SimplyHired</fullName>
            </value>
            <value>
                <fullName>HealthcareSource</fullName>
            </value>
            <value>
                <fullName>Health eCareers</fullName>
            </value>
            <value>
                <fullName>MedJobsCafe</fullName>
            </value>
            <value>
                <fullName>HospitalCareers</fullName>
            </value>
            <value>
                <fullName>FlexJobs</fullName>
            </value>
            <value>
                <fullName>Upwork</fullName>
            </value>
            <value>
                <fullName>Staffing Agencies</fullName>
            </value>
            <value>
                <fullName>Company Website</fullName>
            </value>
            <value>
                <fullName>Internal Job Portal</fullName>
            </value>
            <value>
                <fullName>Handshake (College Recruiting)</fullName>
            </value>
            <value>
                <fullName>Local Job Board</fullName>
            </value>
            <value>
                <fullName>State Workforce Agency</fullName>
            </value>
            <value>
                <fullName>Industry-Specific Board</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>