force-app/main/default/objects/Job__c/fields/Job_Broadcast_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Broadcast_Category__c</fullName>
    <label>Job Broadcast Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative/Clerical</fullName>
            </value>
            <value>
                <fullName>Education/Training</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Sales/Retail/Business Development</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Food Services/Hospitality</fullName>
            </value>
            <value>
                <fullName>Manufacturing/Production/Operations</fullName>
            </value>
            <value>
                <fullName>Building Construction/Skilled Trades</fullName>
            </value>
            <value>
                <fullName>Customer Support/Client Care</fullName>
            </value>
            <value>
                <fullName>Installation/Maintenance/Repair</fullName>
            </value>
            <value>
                <fullName>Security/Protective Services</fullName>
            </value>
            <value>
                <fullName>Biotech/R&amp;D/Science</fullName>
            </value>
            <value>
                <fullName>IT/Software Development</fullName>
            </value>
            <value>
                <fullName>Business/Strategic Management</fullName>
            </value>
            <value>
                <fullName>Medical/Health</fullName>
            </value>
            <value>
                <fullName>Editorial/Writing</fullName>
            </value>
            <value>
                <fullName>Logistics/Transportation</fullName>
            </value>
            <value>
                <fullName>Marketing/Product</fullName>
            </value>
            <value>
                <fullName>Project/Program Management</fullName>
            </value>
            <value>
                <fullName>Creative/Design</fullName>
            </value>
            <value>
                <fullName>Quality Assurance/Safety</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>