force-app/main/default/objects/Job__c/fields/Job_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Job_Contact_Email__c</fullName>
    <label>Job Contact Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>