force-app/main/default/objects/Job__c/fields/Job_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Contact_Name__c</fullName>
    <label>Job Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>