force-app/main/default/objects/Job__c/fields/Job_Description_Rich__c.field-meta.xml
<CustomField>
    <fullName>Job_Description_Rich__c</fullName>
    <label>Job Description Rich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>