force-app/main/default/objects/Job__c/fields/Job_Division__c.field-meta.xml
<CustomField>
    <fullName>Job_Division__c</fullName>
    <label>Job Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Healthcare Division</fullName>
            </value>
            <value>
                <fullName>Information Technology Division</fullName>
            </value>
            <value>
                <fullName>Finance Division</fullName>
            </value>
            <value>
                <fullName>Operations Division</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing Division</fullName>
            </value>
            <value>
                <fullName>Human Resources Division</fullName>
            </value>
            <value>
                <fullName>Customer Service Division</fullName>
            </value>
            <value>
                <fullName>Legal Division</fullName>
            </value>
            <value>
                <fullName>Manufacturing Division</fullName>
            </value>
            <value>
                <fullName>Research &amp; Development Division</fullName>
            </value>
            <value>
                <fullName>Facilities Division</fullName>
            </value>
            <value>
                <fullName>Clinical Services Division</fullName>
            </value>
            <value>
                <fullName>Outpatient Services Division</fullName>
            </value>
            <value>
                <fullName>Inpatient Services Division</fullName>
            </value>
            <value>
                <fullName>Pharmacy Division</fullName>
            </value>
            <value>
                <fullName>Radiology Division</fullName>
            </value>
            <value>
                <fullName>Emergency Services Division</fullName>
            </value>
            <value>
                <fullName>Administration Division</fullName>
            </value>
            <value>
                <fullName>Supply Chain Division</fullName>
            </value>
            <value>
                <fullName>Education Division</fullName>
            </value>
            <value>
                <fullName>Corporate Services Division</fullName>
            </value>
            <value>
                <fullName>Government Services Division</fullName>
            </value>
            <value>
                <fullName>Regional Division (e.g., North Region, South Region, East Region, West Region)</fullName>
            </value>
            <value>
                <fullName>International Division</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Perm</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Temp Allied</fullName>
            </value>
            <value>
                <fullName>Temp Nursing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>