force-app/main/default/objects/Job__c/fields/Job_Industry__c.field-meta.xml
<CustomField>
    <fullName>Job_Industry__c</fullName>
    <label>Job Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Accounting</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Logistics &amp; Transportation</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Agriculture/Forestry/Fishing</fullName>
            </value>
            <value>
                <fullName>Metals and Minerals</fullName>
            </value>
            <value>
                <fullName>Energy and Utilities</fullName>
            </value>
            <value>
                <fullName>Construction - Industrial Facilities and Infrastructure</fullName>
            </value>
            <value>
                <fullName>Aerospace and Defense</fullName>
            </value>
            <value>
                <fullName>Automotive and Parts Mfg</fullName>
            </value>
            <value>
                <fullName>Biotechnology/Pharmaceuticals</fullName>
            </value>
            <value>
                <fullName>Chemicals/Petro-Chemicals</fullName>
            </value>
            <value>
                <fullName>Consumer Packaged Goods Manufacturing</fullName>
            </value>
            <value>
                <fullName>Electronics / Components / and Semiconductor Mfg</fullName>
            </value>
            <value>
                <fullName>Manufacturing - Other</fullName>
            </value>
            <value>
                <fullName>Printing and Publishing</fullName>
            </value>
            <value>
                <fullName>Clothing and Textile Manufacturing</fullName>
            </value>
            <value>
                <fullName>Wholesale Trade/Import-Export</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Travel / Transportation and Tourism</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>