force-app/main/default/objects/Job__c/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <label>Job Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student [undergraduate/ graduate]</fullName>
            </value>
            <value>
                <fullName>Entry Level</fullName>
            </value>
            <value>
                <fullName>Experienced (Non-Manager)</fullName>
            </value>
            <value>
                <fullName>Manager (Manager/Supervisor of Staff)</fullName>
            </value>
            <value>
                <fullName>Executive (SVP / VP / Department Head / etc)</fullName>
            </value>
            <value>
                <fullName>Senior Executive (President / CEO / etc)</fullName>
            </value>
            <value>
                <fullName>Student [High School]</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>