force-app/main/default/objects/Job__c/fields/Job_Location__c.field-meta.xml
<CustomField>
    <fullName>Job_Location__c</fullName>
    <label>Job Location</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>