force-app/main/default/objects/Job__c/fields/Job_Notes__c.field-meta.xml
<CustomField>
    <fullName>Job_Notes__c</fullName>
    <inlineHelpText>Additional Internal Comments</inlineHelpText>
    <label>Job Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>